tests/fixtures/pass/runtime_remainder_overflow.sc
let remainder(left: i32, right: i32): i32 = { left % right }

let main(): i32 = { remainder(-2147483648, -1) }
