tests/fixtures/fail/infer_conflicting_arguments.sc
let same(T: type)(left: T, right: T): T = { left }

let main(): i32 = {
  same(1, true)
  42
}
